add test instance details

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: cat ~/.ssh/id_rsa
 
       - name: Add nutanix.com to known hosts
-        run: ssh-keyscan -H ui.calm.nutanix.com >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H 3.81.226.191 >> ~/.ssh/known_hosts
 
       - name: Connect to SSH
-        run: ssh nutanix@ui.calm.nutanix.com "ls /apps/public/nc-components"
+        run: ssh ec2-user3.81.226.191 "ls -al"
